# docs/swagger.yaml
@@ -129,7 +129,7 @@ definitions:
       userId:
         type: string
     type: object
-  dto.CompleteUploadRequestDTO:
+  dto.CompleteUploadInputDTO:
     properties:
       coverImageUrl:
         type: string
@@ -676,7 +676,7 @@ paths:
         name: completeUpload
         required: true
         schema:
-          $ref: '#/definitions/dto.CompleteUploadRequestDTO'
+          $ref: '#/definitions/dto.CompleteUploadInputDTO'
       produces:
       - application/json
       responses:
